# workers-axum-template

./: Cargo.toml  rustfmt.toml  wrangler.toml
src/: lib.rs
